# multisig-cli

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
cli/: Cargo.toml
cli/src/: config.rs  main.rs  multisig.rs
client/: Cargo.toml
client/src/: lib.rs  request_builder.rs
config/: Cargo.toml
config/src/: lib.rs
scripts/: build_cli.sh
