[package]
name = "cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = {path = "../config" }
clap = "2.33.3"
signal-hook = "0.3.9"
log = "0.4.14"
jemallocator = "0.3.2"
thiserror = "1.0.25"
anyhow = "1.0.41"
simplelog = "0.10.0"
tokio = { version = "1.8.0", features = ["rt-multi-thread", "macros"] } 
spl-token = "3.2.0"
solana-remote-wallet = "1.7.11"
solana-clap-utils = "1.7.11"
serum-multisig = {git = "https://github.com/project-serum/multisig.git", rev = "9200c42ef388b1d266a9a4b0032554bc341a1fa2"}
rand = "0.7.3"
anchor-client = "0.14.0"
shellexpand = "2.1.0"
dirs = "4.0.0"
